--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 [[constraint]]
   name = "github.com/RTradeLtd/go-ipfs-api"
-  version = "1.2.1"
+  branch = "master"
 
 [[constraint]]
   branch = "master"
