--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ sudo: required
 install:
   - docker pull koalaman/shellcheck
   - go get -u golang.org/x/lint/golint
+  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+  - dep ensure -v
 
 before_script:
   - go vet ./...
