--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -13,3 +13,7 @@
 [[constraint]]
   name = "github.com/libp2p/go-libp2p-crypto"
   version = "2.0.1"
+
+[[constraint]]
+  name = "github.com/RTradeLtd/entropy-mnemonics"
+  branch = "master"
