--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -9,10 +9,10 @@
 [[constraint]]
   name = "github.com/RTradeLtd/config"
   version = "v1.0.15"
-  
+
 [[constraint]]
-  branch = "master"
-  name = "github.com/ipfs/go-ipfs-keystore"
+  name = "github.com/RTradeLtd/grpc"
+  version = "v1.0.6"
 
 [[constraint]]
   name = "github.com/libp2p/go-libp2p-crypto"
