--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: go
 go:
-  - "1.11"
+  - "1.12"
 services:
   - docker
 sudo: required
 
+env: GO111MODULE=on 
+
 install:
   - go get -u golang.org/x/lint/golint
   - go get -u github.com/vburenin/ifacemaker
-  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-  - dep ensure -v
+  - go mod download
 
 before_script:
   # install ipfs client for usage with tests that invoke the command line
