--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env: GO111MODULE=on
 install:
   - go get -u golang.org/x/lint/golint
   - go get -u github.com/vburenin/ifacemaker
-  - go mod download
+  - go mod verify
 
 before_script:
   # install ipfs client for usage with tests that invoke the command line
