enable staticcheck in ci, fix issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ sudo: required
 env: GO111MODULE=on 
 
 install:
+  - go get honnef.co/go/tools/cmd/staticcheck
   - go mod download
 
 before_script:
@@ -17,6 +18,7 @@ before_script:
   - make testenv
 
 script:
+  - make verifiers
   - go test -race -short -coverprofile=coverage.txt ./...
 
 after_success:
